feat: add GSAP animations and update Loader component; enhance project modal and styles

--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,10 @@ body {
   padding: 0 4rem;
 }
 
+.box {
+  box-shadow: 0, 0, 15px black;
+}
+
 @supports (-webkit-touch-callout: none) {
   /* Safari-specific styles */
   header {
